--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react-scripts": "0.8.1"
   },
   "dependencies": {
+    "deep-freeze": "0.0.1",
     "normalizr": "^2.2.1",
     "react": "^15.4.1",
     "react-cookie": "^1.0.4",
