--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "deep-freeze": "0.0.1",
+    "nock": "^9.0.2",
     "normalizr": "^2.2.1",
     "react": "^15.4.1",
     "react-cookie": "^1.0.4",
