--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "deep-freeze": "0.0.1",
+    "express": "^4.14.0",
     "nock": "^9.0.2",
     "normalizr": "^2.2.1",
     "react": "^15.4.1",
