--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "nock": "^9.0.2",
     "normalizr": "^2.2.1",
     "react": "^15.4.1",
+    "react-bootstrap": "^0.30.7",
     "react-cookie": "^1.0.4",
     "react-dom": "^15.4.1",
     "react-redux": "^4.4.6",
