--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "devDependencies": {
     "react-scripts": "0.8.1",
-    "redux-mock-store": "^1.2.1"
+    "redux-mock-store": "^1.2.1",
+    "redux-logger": "^2.7.4",
+    "deep-freeze": "0.0.1",
+    "nock": "^9.0.2"
   },
   "dependencies": {
-    "deep-freeze": "0.0.1",
     "express": "^4.14.0",
-    "nock": "^9.0.2",
     "normalizr": "^2.2.1",
     "react": "^15.4.1",
     "react-bootstrap": "^0.30.7",
@@ -19,14 +20,13 @@
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.7",
     "redux": "^3.6.0",
-    "redux-logger": "^2.7.4",
     "redux-thunk": "^2.1.0",
     "whatwg-fetch": "^2.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "start": "NODE_PATH=src/ react-scripts start",
+    "build": "NODE_PATH=src/ react-scripts build",
+    "test": "NODE_PATH=src/ react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
 }
