--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "build": "NODE_PATH=src/ react-scripts build",
     "test": "NODE_PATH=src/ react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "jest": {
+    "moduleDirectories": ["node_modules", "src"]
   }
 }
