--- a/package.json
+++ b/package.json
@@ -3,17 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-scripts": "0.8.1",
-    "redux-mock-store": "^1.2.1",
-    "redux-logger": "^2.7.4",
     "deep-freeze": "0.0.1",
-    "nock": "^9.0.2"
+    "nock": "^9.0.2",
+    "node-sass": "^4.5.0",
+    "react-scripts": "0.8.1",
+    "redux-logger": "^2.7.4",
+    "redux-mock-store": "^1.2.1"
   },
   "dependencies": {
     "express": "^4.14.0",
     "normalizr": "^2.2.1",
     "react": "^15.4.1",
-    "react-bootstrap": "^0.30.7",
     "react-cookie": "^1.0.4",
     "react-dom": "^15.4.1",
     "react-redux": "^4.4.6",
@@ -24,12 +24,20 @@
     "whatwg-fetch": "^2.0.1"
   },
   "scripts": {
-    "start": "NODE_PATH=src/ react-scripts start",
-    "build": "NODE_PATH=src/ react-scripts build",
-    "test": "NODE_PATH=src/ react-scripts test --env=jsdom",
+    "build-css": "node-sass src/sass/ -o src/css",
+    "watch-css": "node-sass src/sass/ -o src/css --watch",
+    "start-js": "NODE_PATH=src/ react-scripts start",
+    "build-js": "NODE_PATH=src/ react-scripts build",
+    "test-js": "NODE_PATH=src/ react-scripts test --env=jsdom",
+    "start": "npm run watch-css &! npm run start-js",
+    "build": "npm run build-css && NODE_PATH=src/ react-scripts build",
+    "test": "npm run test-js",
     "eject": "react-scripts eject"
   },
   "jest": {
-    "moduleDirectories": ["node_modules", "src"]
+    "moduleDirectories": [
+      "node_modules",
+      "src"
+    ]
   }
 }
