--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "normalizr": "^2.2.1",
     "react": "^15.4.1",
     "react-cookie": "^1.0.4",
+    "react-copy-to-clipboard": "^4.2.3",
     "react-dom": "^15.4.1",
     "react-redux": "^4.4.6",
     "react-router": "^3.0.0",
